Fixed minor alignment bugs

--- a/src/pages/experience/experience.css
+++ b/src/pages/experience/experience.css
@@ -98,6 +98,10 @@
     transform: scale(0.5, 0.5);
 }
 
+.projects * {
+    width: fit-content;
+}
+
 .projects a {
     color: var(--text-color);
     text-decoration: none;
